--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -6,6 +6,7 @@ COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY backend/ .
+COPY scripts/ ../scripts/
 
 CMD ["pytest", "-v", "--tb=short"]
 
