--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.109.2
 uvicorn[standard]==0.27.1
 sqlalchemy==2.0.25
-pydantic==2.6.1
+pydantic[email]==2.6.1
 pydantic-settings==2.1.0
 python-multipart==0.0.9
 bibtexparser==1.4.1
@@ -9,3 +9,8 @@ pytest==7.4.4
 pytest-asyncio==0.23.4
 httpx==0.26.0
 aiosqlite==0.19.0
+passlib==1.7.4
+bcrypt==4.0.1
+python-jose[cryptography]==3.3.0
+authlib==1.3.0
+slowapi==0.1.9
